update with 56 changes

--- a/note/annotation-vs-comment.html
+++ b/note/annotation-vs-comment.html
@@ -9,9 +9,9 @@
 <title>Annotation VS Comment - Seorenn Note</title>
 <meta name="twitter:title" content="Annotation VS Comment" />
 <meta name="og:title" content="Annotation VS Comment" />
-<meta name="description" content="이 글은 annotation과 comment라는 두 단어를 개인적인 사정으로(?) 비교하는 이상한 글이다" />
-<meta name="twitter:description" content="이 글은 annotation과 comment라는 두 단어를 개인적인 사정으로(?) 비교하는 이상한 글이다" />
-<meta name="og:description" content="이 글은 annotation과 comment라는 두 단어를 개인적인 사정으로(?) 비교하는 이상한 글이다" />
+<meta name="description" content="annotation과 comment라는 두 단어를 개인적인 사정으로(?) 비교하는 이상한 글" />
+<meta name="twitter:description" content="annotation과 comment라는 두 단어를 개인적인 사정으로(?) 비교하는 이상한 글" />
+<meta name="og:description" content="annotation과 comment라는 두 단어를 개인적인 사정으로(?) 비교하는 이상한 글" />
 <link rel="canonical" href="https://seorenn.github.io/note/annotation-vs-comment.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/annotation-vs-comment.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>Annotation VS Comment</h1>
-<div class="title-date">2020년 7월 1일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -226,9 +226,9 @@ comment: 논평, 언급, 지적, 논평하다, 견해를 밝히다
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/english-note.html">영어 노트</a></h2>
 <span class="article-description">
-개인적으로 작성하는 영어 노트</span
+개인적인 용도로 작성하는 영어 노트</span
 ><span class="article-link-date">
-2020년 7월 1일 수정</span>
+2020년 7월 3일 수정</span>
 </div>
 </div>
 </div>
