--- a/note/c-language.html
+++ b/note/c-language.html
@@ -258,11 +258,20 @@ C는 저수준(?) 언어이기 때문에 복잡한 타입의 값을 복사하는
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/rust.html">Rust</a></h2>
+<span class="article-description">
+러스트(Rust) 소개 및 관련 글 모음</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/annotation-vs-comment.html">Annotation VS Comment</a></h2>
 <span class="article-description">
-이 글은 annotation과 comment라는 두 단어를 개인적인 사정으로(?) 비교하는 이상한 글이다</span
+annotation과 comment라는 두 단어를 개인적인 사정으로(?) 비교하는 이상한 글</span
 ><span class="article-link-date">
-2020년 7월 1일 수정</span>
+2020년 7월 3일 수정</span>
 </div>
 </div>
 <div class="article-link">
@@ -272,15 +281,6 @@ C는 저수준(?) 언어이기 때문에 복잡한 타입의 값을 복사하는
 Objective-C에 대한 짧은 소개</span
 ><span class="article-link-date">
 2020년 6월 23일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/rust.html">Rust</a></h2>
-<span class="article-description">
-러스트(Rust)에 대한 글 모음</span
-><span class="article-link-date">
-2020년 6월 21일 수정</span>
 </div>
 </div>
 <div class="article-link">
