--- a/note/caffeinate.html
+++ b/note/caffeinate.html
@@ -9,9 +9,9 @@
 <title>caffeinate - Seorenn Note</title>
 <meta name="twitter:title" content="caffeinate" />
 <meta name="og:title" content="caffeinate" />
-<meta name="description" content="맥 전용 잠자기 방지 도구인 caffeinate 소개 및 사용법을 정리합니다." />
-<meta name="twitter:description" content="맥 전용 잠자기 방지 도구인 caffeinate 소개 및 사용법을 정리합니다." />
-<meta name="og:description" content="맥 전용 잠자기 방지 도구인 caffeinate 소개 및 사용법을 정리합니다." />
+<meta name="description" content="맥 전용 잠자기 방지 도구인 caffeinate 소개 및 사용법 정리" />
+<meta name="twitter:description" content="맥 전용 잠자기 방지 도구인 caffeinate 소개 및 사용법 정리" />
+<meta name="og:description" content="맥 전용 잠자기 방지 도구인 caffeinate 소개 및 사용법 정리" />
 <link rel="canonical" href="https://seorenn.github.io/note/caffeinate.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/caffeinate.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>caffeinate</h1>
-<div class="title-date">2020년 4월 13일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
