--- a/note/chrome.html
+++ b/note/chrome.html
@@ -9,9 +9,9 @@
 <title>크롬 - Seorenn Note</title>
 <meta name="twitter:title" content="크롬" />
 <meta name="og:title" content="크롬" />
-<meta name="description" content="크롬(Chrome) 웹 브라우저" />
-<meta name="twitter:description" content="크롬(Chrome) 웹 브라우저" />
-<meta name="og:description" content="크롬(Chrome) 웹 브라우저" />
+<meta name="description" content="크롬(Chrome) 웹 브라우저 소개" />
+<meta name="twitter:description" content="크롬(Chrome) 웹 브라우저 소개" />
+<meta name="og:description" content="크롬(Chrome) 웹 브라우저 소개" />
 <link rel="canonical" href="https://seorenn.github.io/note/chrome.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/chrome.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>크롬</h1>
-<div class="title-date">2020년 5월 28일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <blockquote>
 <p>
@@ -117,6 +117,15 @@ HTML5 표준 선정에 큰 영향을 끼쳐 공정하지 못하다는 비판도 
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/safari.html">사파리</a></h2>
+<span class="article-description">
+사파리(Safari) 웹 브라우저 소개</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/wwdc2020.html">WWDC20</a></h2>
 <span class="article-description">
 WWDC 2020(WWDC20) 키노트 정리</span
@@ -131,15 +140,6 @@ WWDC 2020(WWDC20) 키노트 정리</span
 버전(Version)에 대한 이야기</span
 ><span class="article-link-date">
 2020년 6월 7일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/safari.html">사파리</a></h2>
-<span class="article-description">
-사파리(Safari) 웹 브라우저</span
-><span class="article-link-date">
-2020년 5월 28일 수정</span>
 </div>
 </div>
 </div>
