--- a/note/crud.html
+++ b/note/crud.html
@@ -9,9 +9,9 @@
 <title>CRUD - Seorenn Note</title>
 <meta name="twitter:title" content="CRUD" />
 <meta name="og:title" content="CRUD" />
-<meta name="description" content="CRUD란 무슨 의미일까?" />
-<meta name="twitter:description" content="CRUD란 무슨 의미일까?" />
-<meta name="og:description" content="CRUD란 무슨 의미일까?" />
+<meta name="description" content="CRUD란 무슨 의미인가" />
+<meta name="twitter:description" content="CRUD란 무슨 의미인가" />
+<meta name="og:description" content="CRUD란 무슨 의미인가" />
 <link rel="canonical" href="https://seorenn.github.io/note/crud.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/crud.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>CRUD</h1>
-<div class="title-date">2020년 6월 29일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <p>
 CRUD란 Create, Read, Update, Delete의 앞자리만을 따서 지은 합성어로 말 그대로 생성, 읽기, 수정, 삭제 기능 전체를 의미하는 단어다.
