--- a/note/dockerfile.html
+++ b/note/dockerfile.html
@@ -212,18 +212,18 @@ Dockerfile은 <a href="docker.html">Docker</a> 용 이미지를 빌드하기 위
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/docker-compose.html">Docker Compose</a></h2>
+<h2><a class="article-link-title" href="/note/dsl.html">DSL</a></h2>
 <span class="article-description">
-도커 명령을 스펙 파일로 자동화할 수 있는 도구인 Docker Compose(도커 컴포즈)에 대한 간단한 소개 및 예제를 정리하는 글</span
+DSL(Domain Specific Language)의 의미</span
 ><span class="article-link-date">
-2020년 6월 17일 수정</span>
+2020년 7월 3일 수정</span>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/dsl.html">DSL</a></h2>
+<h2><a class="article-link-title" href="/note/docker-compose.html">Docker Compose</a></h2>
 <span class="article-description">
-DSL(Domain Specific Language)</span
+도커 명령을 스펙 파일로 자동화할 수 있는 도구인 Docker Compose(도커 컴포즈)에 대한 간단한 소개 및 예제를 정리하는 글</span
 ><span class="article-link-date">
 2020년 6월 17일 수정</span>
 </div>
