--- a/note/doom-emacs.html
+++ b/note/doom-emacs.html
@@ -9,9 +9,9 @@
 <title>Doom Emacs - Seorenn Note</title>
 <meta name="twitter:title" content="Doom Emacs" />
 <meta name="og:title" content="Doom Emacs" />
-<meta name="description" content="커뮤니티 주도 설정팩인 Doom Emacs(둠 이맥스)의 간략한 설명 및 설정, 단축키 등을 정리하는 글" />
-<meta name="twitter:description" content="커뮤니티 주도 설정팩인 Doom Emacs(둠 이맥스)의 간략한 설명 및 설정, 단축키 등을 정리하는 글" />
-<meta name="og:description" content="커뮤니티 주도 설정팩인 Doom Emacs(둠 이맥스)의 간략한 설명 및 설정, 단축키 등을 정리하는 글" />
+<meta name="description" content="커뮤니티 주도 설정팩인 Doom Emacs(둠 이맥스)의 간략한 설명 및 관련 글 정리" />
+<meta name="twitter:description" content="커뮤니티 주도 설정팩인 Doom Emacs(둠 이맥스)의 간략한 설명 및 관련 글 정리" />
+<meta name="og:description" content="커뮤니티 주도 설정팩인 Doom Emacs(둠 이맥스)의 간략한 설명 및 관련 글 정리" />
 <link rel="canonical" href="https://seorenn.github.io/note/doom-emacs.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/doom-emacs.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>Doom Emacs</h1>
-<div class="title-date">2020년 6월 26일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -349,29 +349,38 @@ sync가 완료된 후 <a href="emacs.html">Emacs</a>를 재시작하고
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/org-publish.html">Org Publish로 익스포트 자동화하기</a></h2>
+<h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
 <span class="article-description">
-Org 문서들과 관련 파일들을 자동으로 익스포트해 주는 Org Publish의 설정방법과 사용법을 알아보자</span
+Org Mode 에 대한 소개와 문법, 관련된 글 정리</span
 ><span class="article-link-date">
-2020년 6월 26일 수정</span>
+2020년 7월 3일 수정</span>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
+<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
 <span class="article-description">
-Org Mode 에 대한 소개와 문법, 관련된 글들을 정리합니다.</span
+Emacs(이맥스)에 관한 대략적인 설명과 관련된 글들</span
 ><span class="article-link-date">
-2020년 6월 26일 수정</span>
+2020년 7월 3일 수정</span>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/org-table-spreadsheet.html">Org 테이블 스프레드시트</a></h2>
 <span class="article-description">
-Org Mode의 테이블의 스프레드시트 기능을 사용해보자</span
+Org Mode의 테이블의 스프레드시트 기능 사용법</span
 ><span class="article-link-date">
-2020년 6월 26일 수정</span>
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/org-publish.html">Org Publish로 익스포트 자동화하기</a></h2>
+<span class="article-description">
+Org 문서들과 관련 파일들을 자동으로 익스포트해 주는 Org Publish의 설정방법과 사용법 정리</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
 </div>
 </div>
 <div class="article-link">
@@ -426,15 +435,6 @@ ielm(Inferior Emacs Lisp Mode)에 대한 간단한 소개</span
 Vim 에디터와 관련된 글</span
 ><span class="article-link-date">
 2020년 6월 3일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
-<span class="article-description">
-Emacs(이맥스)에 관한 대략적인 설명과 관련된 글들, 그리고 몇 가지 트러블슈팅 메모를 정리합니다.</span
-><span class="article-link-date">
-2020년 5월 12일 수정</span>
 </div>
 </div>
 <div class="article-link">
