--- a/note/dsl.html
+++ b/note/dsl.html
@@ -9,9 +9,9 @@
 <title>DSL - Seorenn Note</title>
 <meta name="twitter:title" content="DSL" />
 <meta name="og:title" content="DSL" />
-<meta name="description" content="DSL(Domain Specific Language)" />
-<meta name="twitter:description" content="DSL(Domain Specific Language)" />
-<meta name="og:description" content="DSL(Domain Specific Language)" />
+<meta name="description" content="DSL(Domain Specific Language)의 의미" />
+<meta name="twitter:description" content="DSL(Domain Specific Language)의 의미" />
+<meta name="og:description" content="DSL(Domain Specific Language)의 의미" />
 <link rel="canonical" href="https://seorenn.github.io/note/dsl.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/dsl.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>DSL</h1>
-<div class="title-date">2020년 6월 17일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <p>
 DSL(Domain Specific Language), 직역하여 '영역 특정 언어' 정도로 해석이 가능한다. 그 이름처럼 특정 분야에서 쓰기 위해 특수하게 만들어진 스크립팅 혹은 설정용 언어이다.
