--- a/note/english-note.html
+++ b/note/english-note.html
@@ -9,9 +9,9 @@
 <title>영어 노트 - Seorenn Note</title>
 <meta name="twitter:title" content="영어 노트" />
 <meta name="og:title" content="영어 노트" />
-<meta name="description" content="개인적으로 작성하는 영어 노트" />
-<meta name="twitter:description" content="개인적으로 작성하는 영어 노트" />
-<meta name="og:description" content="개인적으로 작성하는 영어 노트" />
+<meta name="description" content="개인적인 용도로 작성하는 영어 노트" />
+<meta name="twitter:description" content="개인적인 용도로 작성하는 영어 노트" />
+<meta name="og:description" content="개인적인 용도로 작성하는 영어 노트" />
 <link rel="canonical" href="https://seorenn.github.io/note/english-note.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/english-note.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>영어 노트</h1>
-<div class="title-date">2020년 7월 1일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
