--- a/note/flake8.html
+++ b/note/flake8.html
@@ -9,9 +9,9 @@
 <title>flake8 - Seorenn Note</title>
 <meta name="twitter:title" content="flake8" />
 <meta name="og:title" content="flake8" />
-<meta name="description" content="flake8의 사용법 및 설정 방법을 간단히 정리합니다." />
-<meta name="twitter:description" content="flake8의 사용법 및 설정 방법을 간단히 정리합니다." />
-<meta name="og:description" content="flake8의 사용법 및 설정 방법을 간단히 정리합니다." />
+<meta name="description" content="flake8의 사용법 및 설정 방법 정리" />
+<meta name="twitter:description" content="flake8의 사용법 및 설정 방법 정리" />
+<meta name="og:description" content="flake8의 사용법 및 설정 방법 정리" />
 <link rel="canonical" href="https://seorenn.github.io/note/flake8.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/flake8.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>flake8</h1>
-<div class="title-date">2020년 4월 19일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
