--- a/note/homebrew.html
+++ b/note/homebrew.html
@@ -9,9 +9,9 @@
 <title>Homebrew - Seorenn Note</title>
 <meta name="twitter:title" content="Homebrew" />
 <meta name="og:title" content="Homebrew" />
-<meta name="description" content="Homebrew의 소개 및 간단한 사용법을 정리합니다" />
-<meta name="twitter:description" content="Homebrew의 소개 및 간단한 사용법을 정리합니다" />
-<meta name="og:description" content="Homebrew의 소개 및 간단한 사용법을 정리합니다" />
+<meta name="description" content="Homebrew의 소개 및 간단한 사용법" />
+<meta name="twitter:description" content="Homebrew의 소개 및 간단한 사용법" />
+<meta name="og:description" content="Homebrew의 소개 및 간단한 사용법" />
 <link rel="canonical" href="https://seorenn.github.io/note/homebrew.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/homebrew.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>Homebrew</h1>
-<div class="title-date">2020년 4월 17일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -376,6 +376,24 @@ outdated나 upgrade, uninstall 등등의 커맨드는 비슷하게 사용할 수
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/rust.html">Rust</a></h2>
+<span class="article-description">
+러스트(Rust) 소개 및 관련 글 모음</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/pyenv.html">pyenv</a></h2>
+<span class="article-description">
+파이썬 버전 및 virtualenv 환경을 별도로 관리할 수 있게 해주는 pyenv의 소개 및 사용법 정리</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/python.html">Python</a></h2>
 <span class="article-description">
 Python(파이썬)에 관한 간략한 설명 및 자료 정리</span
@@ -390,15 +408,6 @@ Python(파이썬)에 관한 간략한 설명 및 자료 정리</span
 Mozilla JPEG Encoder</span
 ><span class="article-link-date">
 2020년 6월 23일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/rust.html">Rust</a></h2>
-<span class="article-description">
-러스트(Rust)에 대한 글 모음</span
-><span class="article-link-date">
-2020년 6월 21일 수정</span>
 </div>
 </div>
 <div class="article-link">
@@ -435,15 +444,6 @@ pngquant로 PNG 이미지 압축하기</span
 SVG(Scalable Vector Graphics)와 관련된 정보 모음</span
 ><span class="article-link-date">
 2020년 4월 23일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/pyenv.html">pyenv</a></h2>
-<span class="article-description">
-파이썬 버전 및 virtualenv 환경을 별도로 관리할 수 있게 해주는 pyenv의 소개 및 사용법을 정리하는 글입니다.</span
-><span class="article-link-date">
-2020년 4월 22일 수정</span>
 </div>
 </div>
 <div class="article-link">
