--- a/note/javascript-equality.html
+++ b/note/javascript-equality.html
@@ -9,9 +9,9 @@
 <title>Javascript에서 같음을 비교하기 - Seorenn Note</title>
 <meta name="twitter:title" content="Javascript에서 같음을 비교하기" />
 <meta name="og:title" content="Javascript에서 같음을 비교하기" />
-<meta name="description" content="이 글은 자바스크립트의 최악의 모호성으로 평가받는 같음을 비교하는 것에 관한 글이다" />
-<meta name="twitter:description" content="이 글은 자바스크립트의 최악의 모호성으로 평가받는 같음을 비교하는 것에 관한 글이다" />
-<meta name="og:description" content="이 글은 자바스크립트의 최악의 모호성으로 평가받는 같음을 비교하는 것에 관한 글이다" />
+<meta name="description" content="자바스크립트의 최악의 모호성으로 평가받는 같음을 비교하는 방법 정리" />
+<meta name="twitter:description" content="자바스크립트의 최악의 모호성으로 평가받는 같음을 비교하는 방법 정리" />
+<meta name="og:description" content="자바스크립트의 최악의 모호성으로 평가받는 같음을 비교하는 방법 정리" />
 <link rel="canonical" href="https://seorenn.github.io/note/javascript-equality.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/javascript-equality.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -258,7 +258,7 @@
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/javascript.html">Javascript</a></h2>
 <span class="article-description">
-자바스크립트(Javascript), ECMAScript(ES5, ES6)와 관련된 글들</span
+자바스크립트(Javascript), ECMAScript(ES5, ES6)와 관련된 글 정리</span
 ><span class="article-link-date">
 2020년 7월 2일 수정</span>
 </div>
