--- a/note/javascript.html
+++ b/note/javascript.html
@@ -9,9 +9,9 @@
 <title>Javascript - Seorenn Note</title>
 <meta name="twitter:title" content="Javascript" />
 <meta name="og:title" content="Javascript" />
-<meta name="description" content="자바스크립트(Javascript), ECMAScript(ES5, ES6)와 관련된 글들" />
-<meta name="twitter:description" content="자바스크립트(Javascript), ECMAScript(ES5, ES6)와 관련된 글들" />
-<meta name="og:description" content="자바스크립트(Javascript), ECMAScript(ES5, ES6)와 관련된 글들" />
+<meta name="description" content="자바스크립트(Javascript), ECMAScript(ES5, ES6)와 관련된 글 정리" />
+<meta name="twitter:description" content="자바스크립트(Javascript), ECMAScript(ES5, ES6)와 관련된 글 정리" />
+<meta name="og:description" content="자바스크립트(Javascript), ECMAScript(ES5, ES6)와 관련된 글 정리" />
 <link rel="canonical" href="https://seorenn.github.io/note/javascript.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/javascript.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -446,18 +446,27 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/javascript-equality.html">Javascript에서 같음을 비교하기</a></h2>
+<h2><a class="article-link-title" href="/note/org-publish.html">Org Publish로 익스포트 자동화하기</a></h2>
 <span class="article-description">
-이 글은 자바스크립트의 최악의 모호성으로 평가받는 같음을 비교하는 것에 관한 글이다</span
+Org 문서들과 관련 파일들을 자동으로 익스포트해 주는 Org Publish의 설정방법과 사용법 정리</span
 ><span class="article-link-date">
-2020년 7월 2일 수정</span>
+2020년 7월 3일 수정</span>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/promise.html">Javascript Promise</a></h2>
 <span class="article-description">
-자바스크립트의 Promise 객체와 async, await에 대해 정리해보자</span
+자바스크립트의 비동기 작업을 위한 Promise 객체와 async, await에 대한 정리</span
+><span class="article-link-date">
+2020년 7월 2일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/javascript-equality.html">Javascript에서 같음을 비교하기</a></h2>
+<span class="article-description">
+자바스크립트의 최악의 모호성으로 평가받는 같음을 비교하는 방법 정리</span
 ><span class="article-link-date">
 2020년 7월 2일 수정</span>
 </div>
@@ -478,15 +487,6 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
 자바스크립트의 화살표 함수의 소개와 함께 이와 관련된 글들</span
 ><span class="article-link-date">
 2020년 6월 30일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/org-publish.html">Org Publish로 익스포트 자동화하기</a></h2>
-<span class="article-description">
-Org 문서들과 관련 파일들을 자동으로 익스포트해 주는 Org Publish의 설정방법과 사용법을 알아보자</span
-><span class="article-link-date">
-2020년 6월 26일 수정</span>
 </div>
 </div>
 <div class="article-link">
