--- a/note/killer-application.html
+++ b/note/killer-application.html
@@ -9,9 +9,9 @@
 <title>킬러 애플리케이션 - Seorenn Note</title>
 <meta name="twitter:title" content="킬러 애플리케이션" />
 <meta name="og:title" content="킬러 애플리케이션" />
-<meta name="description" content="킬러 애플리케이션(Killer Application)" />
-<meta name="twitter:description" content="킬러 애플리케이션(Killer Application)" />
-<meta name="og:description" content="킬러 애플리케이션(Killer Application)" />
+<meta name="description" content="킬러 애플리케이션(Killer Application)의 의미" />
+<meta name="twitter:description" content="킬러 애플리케이션(Killer Application)의 의미" />
+<meta name="og:description" content="킬러 애플리케이션(Killer Application)의 의미" />
 <link rel="canonical" href="https://seorenn.github.io/note/killer-application.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/killer-application.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>킬러 애플리케이션</h1>
-<div class="title-date">2020년 5월 28일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <p>
 킬러 애플리케이션(Killer Application)이란 해당 애플리케이션이 워낙 기능이 좋아서
@@ -112,9 +112,9 @@ Logic Pro X나 <a href="fcpx.html">Final Cut Pro X</a>가 <a href="macos.html">m
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
 <span class="article-description">
-Org Mode 에 대한 소개와 문법, 관련된 글들을 정리합니다.</span
+Org Mode 에 대한 소개와 문법, 관련된 글 정리</span
 ><span class="article-link-date">
-2020년 6월 26일 수정</span>
+2020년 7월 3일 수정</span>
 </div>
 </div>
 <div class="article-link">
