--- a/note/namespace.html
+++ b/note/namespace.html
@@ -114,20 +114,20 @@
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
+<h2><a class="article-link-title" href="/note/rust.html">Rust</a></h2>
 <span class="article-description">
-Swift(스위프트) 언어에 대한 간략한 소개 및 관련된 내용들</span
+러스트(Rust) 소개 및 관련 글 모음</span
 ><span class="article-link-date">
-2020년 7월 2일 수정</span>
+2020년 7월 3일 수정</span>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/rust.html">Rust</a></h2>
+<h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
 <span class="article-description">
-러스트(Rust)에 대한 글 모음</span
+스위프트 언어에 대한 소개 및 관련된 글 정리</span
 ><span class="article-link-date">
-2020년 6월 21일 수정</span>
+2020년 7월 2일 수정</span>
 </div>
 </div>
 </div>
