--- a/note/npm.html
+++ b/note/npm.html
@@ -9,9 +9,9 @@
 <title>npm - Seorenn Note</title>
 <meta name="twitter:title" content="npm" />
 <meta name="og:title" content="npm" />
-<meta name="description" content="npm은 무엇일까?" />
-<meta name="twitter:description" content="npm은 무엇일까?" />
-<meta name="og:description" content="npm은 무엇일까?" />
+<meta name="description" content="npm의 소개 및 사용법 정리" />
+<meta name="twitter:description" content="npm의 소개 및 사용법 정리" />
+<meta name="og:description" content="npm의 소개 및 사용법 정리" />
 <link rel="canonical" href="https://seorenn.github.io/note/npm.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/npm.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>npm</h1>
-<div class="title-date">2020년 6월 21일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -227,18 +227,18 @@ TEST
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/npx.html">npx</a></h2>
 <span class="article-description">
-NPX란 무엇일까?</span
+NPX의 소개 및 사용법 정리</span
 ><span class="article-link-date">
-2020년 6월 21일 수정</span>
+2020년 7월 3일 수정</span>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/poetry.html">Poetry</a></h2>
 <span class="article-description">
-poetry라는 새로운 파이썬 의존성 및 패키지 관리자의 사용법을 정리하는 글입니다.</span
+poetry라는 새로운 파이썬 의존성 및 패키지 관리자의 사용법 정리</span
 ><span class="article-link-date">
-2020년 6월 21일 수정</span>
+2020년 7월 3일 수정</span>
 </div>
 </div>
 <div class="article-link">
