--- a/note/npx.html
+++ b/note/npx.html
@@ -9,9 +9,9 @@
 <title>npx - Seorenn Note</title>
 <meta name="twitter:title" content="npx" />
 <meta name="og:title" content="npx" />
-<meta name="description" content="NPX란 무엇일까?" />
-<meta name="twitter:description" content="NPX란 무엇일까?" />
-<meta name="og:description" content="NPX란 무엇일까?" />
+<meta name="description" content="NPX의 소개 및 사용법 정리" />
+<meta name="twitter:description" content="NPX의 소개 및 사용법 정리" />
+<meta name="og:description" content="NPX의 소개 및 사용법 정리" />
 <link rel="canonical" href="https://seorenn.github.io/note/npx.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/npx.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>npx</h1>
-<div class="title-date">2020년 6월 21일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <p>
 npx는 <a href="npm.html">npm</a> 5.2.0 혹은 그 이후의 버전 설치 시 사용할 수 있는 <a href="cli.html">CLI</a> 도구로 원격에 등록된 npm 패키지의 바이너리 혹은 스크립트를 실행시키는 용도로 사용한다. 그래서 npm으로 패키지를 설치하지 않고도 간단한 작업을 대신 수행할 수 있다.
