--- a/note/org-publish.html
+++ b/note/org-publish.html
@@ -9,9 +9,9 @@
 <title>Org Publish로 익스포트 자동화하기 - Seorenn Note</title>
 <meta name="twitter:title" content="Org Publish로 익스포트 자동화하기" />
 <meta name="og:title" content="Org Publish로 익스포트 자동화하기" />
-<meta name="description" content="Org 문서들과 관련 파일들을 자동으로 익스포트해 주는 Org Publish의 설정방법과 사용법을 알아보자" />
-<meta name="twitter:description" content="Org 문서들과 관련 파일들을 자동으로 익스포트해 주는 Org Publish의 설정방법과 사용법을 알아보자" />
-<meta name="og:description" content="Org 문서들과 관련 파일들을 자동으로 익스포트해 주는 Org Publish의 설정방법과 사용법을 알아보자" />
+<meta name="description" content="Org 문서들과 관련 파일들을 자동으로 익스포트해 주는 Org Publish의 설정방법과 사용법 정리" />
+<meta name="twitter:description" content="Org 문서들과 관련 파일들을 자동으로 익스포트해 주는 Org Publish의 설정방법과 사용법 정리" />
+<meta name="og:description" content="Org 문서들과 관련 파일들을 자동으로 익스포트해 주는 Org Publish의 설정방법과 사용법 정리" />
 <link rel="canonical" href="https://seorenn.github.io/note/org-publish.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/org-publish.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>Org Publish로 익스포트 자동화하기</h1>
-<div class="title-date">2020년 6월 26일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -333,9 +333,9 @@ Org Publish의 프로젝트 설정은 <code>org-publish-project-alist</code> 라
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
 <span class="article-description">
-Org Mode 에 대한 소개와 문법, 관련된 글들을 정리합니다.</span
+Org Mode 에 대한 소개와 문법, 관련된 글 정리</span
 ><span class="article-link-date">
-2020년 6월 26일 수정</span>
+2020년 7월 3일 수정</span>
 </div>
 </div>
 </div>
