--- a/note/org-table-spreadsheet.html
+++ b/note/org-table-spreadsheet.html
@@ -9,9 +9,9 @@
 <title>Org 테이블 스프레드시트 - Seorenn Note</title>
 <meta name="twitter:title" content="Org 테이블 스프레드시트" />
 <meta name="og:title" content="Org 테이블 스프레드시트" />
-<meta name="description" content="Org Mode의 테이블의 스프레드시트 기능을 사용해보자" />
-<meta name="twitter:description" content="Org Mode의 테이블의 스프레드시트 기능을 사용해보자" />
-<meta name="og:description" content="Org Mode의 테이블의 스프레드시트 기능을 사용해보자" />
+<meta name="description" content="Org Mode의 테이블의 스프레드시트 기능 사용법" />
+<meta name="twitter:description" content="Org Mode의 테이블의 스프레드시트 기능 사용법" />
+<meta name="og:description" content="Org Mode의 테이블의 스프레드시트 기능 사용법" />
 <link rel="canonical" href="https://seorenn.github.io/note/org-table-spreadsheet.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/org-table-spreadsheet.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>Org 테이블 스프레드시트</h1>
-<div class="title-date">2020년 6월 26일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -474,18 +474,18 @@ I*2 |$1-----+$2-----+$3-----+$4-------|
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
 <span class="article-description">
-Org Mode 에 대한 소개와 문법, 관련된 글들을 정리합니다.</span
+Org Mode 에 대한 소개와 문법, 관련된 글 정리</span
 ><span class="article-link-date">
-2020년 6월 26일 수정</span>
+2020년 7월 3일 수정</span>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/org-syntax.html">Org 문법 정리</a></h2>
+<h2><a class="article-link-title" href="/note/org-syntax.html">Org 문법</a></h2>
 <span class="article-description">
-Org Mode의 마크업 문법 일부를 정리하는 글</span
+Org 문서의 마크업 문법 일부를 정리하는 글</span
 ><span class="article-link-date">
-2020년 6월 26일 수정</span>
+2020년 7월 3일 수정</span>
 </div>
 </div>
 </div>
