--- a/note/poetry.html
+++ b/note/poetry.html
@@ -9,9 +9,9 @@
 <title>Poetry - Seorenn Note</title>
 <meta name="twitter:title" content="Poetry" />
 <meta name="og:title" content="Poetry" />
-<meta name="description" content="poetry라는 새로운 파이썬 의존성 및 패키지 관리자의 사용법을 정리하는 글입니다." />
-<meta name="twitter:description" content="poetry라는 새로운 파이썬 의존성 및 패키지 관리자의 사용법을 정리하는 글입니다." />
-<meta name="og:description" content="poetry라는 새로운 파이썬 의존성 및 패키지 관리자의 사용법을 정리하는 글입니다." />
+<meta name="description" content="poetry라는 새로운 파이썬 의존성 및 패키지 관리자의 사용법 정리" />
+<meta name="twitter:description" content="poetry라는 새로운 파이썬 의존성 및 패키지 관리자의 사용법 정리" />
+<meta name="og:description" content="poetry라는 새로운 파이썬 의존성 및 패키지 관리자의 사용법 정리" />
 <link rel="canonical" href="https://seorenn.github.io/note/poetry.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/poetry.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>Poetry</h1>
-<div class="title-date">2020년 6월 21일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
