--- a/note/promise.html
+++ b/note/promise.html
@@ -9,9 +9,9 @@
 <title>Javascript Promise - Seorenn Note</title>
 <meta name="twitter:title" content="Javascript Promise" />
 <meta name="og:title" content="Javascript Promise" />
-<meta name="description" content="자바스크립트의 Promise 객체와 async, await에 대해 정리해보자" />
-<meta name="twitter:description" content="자바스크립트의 Promise 객체와 async, await에 대해 정리해보자" />
-<meta name="og:description" content="자바스크립트의 Promise 객체와 async, await에 대해 정리해보자" />
+<meta name="description" content="자바스크립트의 비동기 작업을 위한 Promise 객체와 async, await에 대한 정리" />
+<meta name="twitter:description" content="자바스크립트의 비동기 작업을 위한 Promise 객체와 async, await에 대한 정리" />
+<meta name="og:description" content="자바스크립트의 비동기 작업을 위한 Promise 객체와 async, await에 대한 정리" />
 <link rel="canonical" href="https://seorenn.github.io/note/promise.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/promise.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -207,7 +207,7 @@ async는 비동기로 실행시킬 함수나 익명 함수 선언 앞에 붙일 
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/javascript.html">Javascript</a></h2>
 <span class="article-description">
-자바스크립트(Javascript), ECMAScript(ES5, ES6)와 관련된 글들</span
+자바스크립트(Javascript), ECMAScript(ES5, ES6)와 관련된 글 정리</span
 ><span class="article-link-date">
 2020년 7월 2일 수정</span>
 </div>
