--- a/note/python-bitstring.html
+++ b/note/python-bitstring.html
@@ -9,9 +9,9 @@
 <title>bitstring(Python) - Seorenn Note</title>
 <meta name="twitter:title" content="bitstring(Python)" />
 <meta name="og:title" content="bitstring(Python)" />
-<meta name="description" content="파이썬의 bitstring 패키지가 무엇인지 살펴보자" />
-<meta name="twitter:description" content="파이썬의 bitstring 패키지가 무엇인지 살펴보자" />
-<meta name="og:description" content="파이썬의 bitstring 패키지가 무엇인지 살펴보자" />
+<meta name="description" content="파이썬의 bitstring 패키지 소개 및 사용법 정리" />
+<meta name="twitter:description" content="파이썬의 bitstring 패키지 소개 및 사용법 정리" />
+<meta name="og:description" content="파이썬의 bitstring 패키지 소개 및 사용법 정리" />
 <link rel="canonical" href="https://seorenn.github.io/note/python-bitstring.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/python-bitstring.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>bitstring(Python)</h1>
-<div class="title-date">2020년 6월 21일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
