--- a/note/python-dictionary.html
+++ b/note/python-dictionary.html
@@ -9,9 +9,9 @@
 <title>Python 딕셔너리 타입 정리 - Seorenn Note</title>
 <meta name="twitter:title" content="Python 딕셔너리 타입 정리" />
 <meta name="og:title" content="Python 딕셔너리 타입 정리" />
-<meta name="description" content="파이썬의 사전형 혹은 딕셔너리 타입(Dictionary Type)의 생성과 수정 및 여러 변조 방법을 알아보자" />
-<meta name="twitter:description" content="파이썬의 사전형 혹은 딕셔너리 타입(Dictionary Type)의 생성과 수정 및 여러 변조 방법을 알아보자" />
-<meta name="og:description" content="파이썬의 사전형 혹은 딕셔너리 타입(Dictionary Type)의 생성과 수정 및 여러 변조 방법을 알아보자" />
+<meta name="description" content="파이썬의 사전형 혹은 딕셔너리 타입(Dictionary Type)의 생성과 수정 및 여러 변조 방법 정리" />
+<meta name="twitter:description" content="파이썬의 사전형 혹은 딕셔너리 타입(Dictionary Type)의 생성과 수정 및 여러 변조 방법 정리" />
+<meta name="og:description" content="파이썬의 사전형 혹은 딕셔너리 타입(Dictionary Type)의 생성과 수정 및 여러 변조 방법 정리" />
 <link rel="canonical" href="https://seorenn.github.io/note/python-dictionary.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/python-dictionary.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>Python 딕셔너리 타입 정리</h1>
-<div class="title-date">2020년 6월 27일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
