--- a/note/python-file-dir-tips.html
+++ b/note/python-file-dir-tips.html
@@ -9,9 +9,9 @@
 <title>Python으로 파일의 경로 및 목록 다루기 - Seorenn Note</title>
 <meta name="twitter:title" content="Python으로 파일의 경로 및 목록 다루기" />
 <meta name="og:title" content="Python으로 파일의 경로 및 목록 다루기" />
-<meta name="description" content="파이썬으로 경로에서 파일명 얻기, 확장자 분리하기, 디렉터리 구분하기, 파일 디렉터리 목록 얻기 등" />
-<meta name="twitter:description" content="파이썬으로 경로에서 파일명 얻기, 확장자 분리하기, 디렉터리 구분하기, 파일 디렉터리 목록 얻기 등" />
-<meta name="og:description" content="파이썬으로 경로에서 파일명 얻기, 확장자 분리하기, 디렉터리 구분하기, 파일 디렉터리 목록 얻기 등" />
+<meta name="description" content="파이썬으로 경로에서 파일명 얻기, 확장자 분리하기, 디렉터리 구분하기, 파일 디렉터리 목록 얻기 등의 팁 정리" />
+<meta name="twitter:description" content="파이썬으로 경로에서 파일명 얻기, 확장자 분리하기, 디렉터리 구분하기, 파일 디렉터리 목록 얻기 등의 팁 정리" />
+<meta name="og:description" content="파이썬으로 경로에서 파일명 얻기, 확장자 분리하기, 디렉터리 구분하기, 파일 디렉터리 목록 얻기 등의 팁 정리" />
 <link rel="canonical" href="https://seorenn.github.io/note/python-file-dir-tips.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/python-file-dir-tips.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>Python으로 파일의 경로 및 목록 다루기</h1>
-<div class="title-date">2020년 6월 27일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
