--- a/note/python3-manual-migration.html
+++ b/note/python3-manual-migration.html
@@ -9,9 +9,9 @@
 <title>Python 3로 수동으로 옮겨가기 - Seorenn Note</title>
 <meta name="twitter:title" content="Python 3로 수동으로 옮겨가기" />
 <meta name="og:title" content="Python 3로 수동으로 옮겨가기" />
-<meta name="description" content="Python 3 수동 마이그레이션에 대해 정리해보자" />
-<meta name="twitter:description" content="Python 3 수동 마이그레이션에 대해 정리해보자" />
-<meta name="og:description" content="Python 3 수동 마이그레이션에 대해 정리해보자" />
+<meta name="description" content="Python 3 수동 마이그레이션에 대한 개인적인 경험 정리" />
+<meta name="twitter:description" content="Python 3 수동 마이그레이션에 대한 개인적인 경험 정리" />
+<meta name="og:description" content="Python 3 수동 마이그레이션에 대한 개인적인 경험 정리" />
 <link rel="canonical" href="https://seorenn.github.io/note/python3-manual-migration.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/python3-manual-migration.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>Python 3로 수동으로 옮겨가기</h1>
-<div class="title-date">2020년 6월 21일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
