--- a/note/rust.html
+++ b/note/rust.html
@@ -9,9 +9,9 @@
 <title>Rust - Seorenn Note</title>
 <meta name="twitter:title" content="Rust" />
 <meta name="og:title" content="Rust" />
-<meta name="description" content="러스트(Rust)에 대한 글 모음" />
-<meta name="twitter:description" content="러스트(Rust)에 대한 글 모음" />
-<meta name="og:description" content="러스트(Rust)에 대한 글 모음" />
+<meta name="description" content="러스트(Rust) 소개 및 관련 글 모음" />
+<meta name="twitter:description" content="러스트(Rust) 소개 및 관련 글 모음" />
+<meta name="og:description" content="러스트(Rust) 소개 및 관련 글 모음" />
 <link rel="canonical" href="https://seorenn.github.io/note/rust.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/rust.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>Rust</h1>
-<div class="title-date">2020년 6월 21일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
