--- a/note/sh.html
+++ b/note/sh.html
@@ -9,9 +9,9 @@
 <title>Bourne Shell - Seorenn Note</title>
 <meta name="twitter:title" content="Bourne Shell" />
 <meta name="og:title" content="Bourne Shell" />
-<meta name="description" content="본 셸, sh, 가장 기본적인 셸(Shell)에 대한 팁을 정리해 보는 글입니다." />
-<meta name="twitter:description" content="본 셸, sh, 가장 기본적인 셸(Shell)에 대한 팁을 정리해 보는 글입니다." />
-<meta name="og:description" content="본 셸, sh, 가장 기본적인 셸(Shell)에 대한 팁을 정리해 보는 글입니다." />
+<meta name="description" content="본 셸, sh, 가장 기본적인 셸(Shell)에 대한 팁 정리" />
+<meta name="twitter:description" content="본 셸, sh, 가장 기본적인 셸(Shell)에 대한 팁 정리" />
+<meta name="og:description" content="본 셸, sh, 가장 기본적인 셸(Shell)에 대한 팁 정리" />
 <link rel="canonical" href="https://seorenn.github.io/note/sh.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/sh.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>Bourne Shell</h1>
-<div class="title-date">2020년 4월 13일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -347,9 +347,9 @@ than, greater than or equal, less than, less than or equal</li>
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/shell.html">셸</a></h2>
 <span class="article-description">
-셸(Shell)</span
+셸(Shell)이란 무엇인가</span
 ><span class="article-link-date">
-2020년 4월 13일 수정</span>
+2020년 7월 3일 수정</span>
 </div>
 </div>
 </div>
