--- a/note/shell.html
+++ b/note/shell.html
@@ -9,9 +9,9 @@
 <title>셸 - Seorenn Note</title>
 <meta name="twitter:title" content="셸" />
 <meta name="og:title" content="셸" />
-<meta name="description" content="셸(Shell)" />
-<meta name="twitter:description" content="셸(Shell)" />
-<meta name="og:description" content="셸(Shell)" />
+<meta name="description" content="셸(Shell)이란 무엇인가" />
+<meta name="twitter:description" content="셸(Shell)이란 무엇인가" />
+<meta name="og:description" content="셸(Shell)이란 무엇인가" />
 <link rel="canonical" href="https://seorenn.github.io/note/shell.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/shell.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,20 +61,41 @@
 </div>
 <header>
 <h1>셸</h1>
-<div class="title-date">2020년 4월 13일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
+<div id="table-of-contents">
+<h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
+<ul>
+<li><a href="#51afc692">조개 껍질</a></li>
+<li><a href="#a5d99474">CLI의 영원한 하수인(?)</a></li>
+</ul>
+</div>
+</div>
 <p>
-셸(Shell)은 텍스트 커맨드를 입력 받아 분석하고 명령을 전달하는 시스템
-소프트웨어다.
+Shell은 한국어로 '셸' 이라 부른다. '쉘' 이 아님에 주의하자. 어쨌든 이 단어의 의미는 무엇일까.
+</p>
+
+<div id="outline-container-51afc692" class="outline-2">
+<h2 id="51afc692">조개 껍질</h2>
+<div class="outline-text-2" id="text-51afc692">
+<p>
+일반적으로 셸(shell)은 조개나 고둥의 껍질을 의미한다. 딱딱하여 집 대신 사용할 수도 있고 외부의 충격이나 공격에서 보호해주는 아주 훌륭한 보호막이다.
+</p>
+</div>
+</div>
+
+<div id="outline-container-a5d99474" class="outline-2">
+<h2 id="a5d99474">CLI의 영원한 하수인(?)</h2>
+<div class="outline-text-2" id="text-a5d99474">
+<p>
+셸(Shell)은 <a href="cli.html">CLI</a> 커맨드나 유틸리티를 실행시키기 위해 텍스트 커맨드 입력 인터페이스를 제공하고, 입력받은 내용을 분석하고 시스템에 실제 명령을 전달하는 시스템 소프트웨어다.
 </p>
 
 <p>
 대표적으로 <a href="sh.html">Bourne Shell</a>이 유명하다.
 </p>
-
-<p>
-주로 <a href="cli.html">CLI</a>와 큰 관계가 있다.
-</p>
+</div>
+</div>
 <div class="mid-ad-container">
 <ins class="adsbygoogle mid-ad"
      style="display:block"
@@ -88,6 +109,51 @@
 </div>
 <div class="backlinks-container">
 <hr /><h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/rust.html">Rust</a></h2>
+<span class="article-description">
+러스트(Rust) 소개 및 관련 글 모음</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/poetry.html">Poetry</a></h2>
+<span class="article-description">
+poetry라는 새로운 파이썬 의존성 및 패키지 관리자의 사용법 정리</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
+<span class="article-description">
+Emacs(이맥스)에 관한 대략적인 설명과 관련된 글들</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/pyenv.html">pyenv</a></h2>
+<span class="article-description">
+파이썬 버전 및 virtualenv 환경을 별도로 관리할 수 있게 해주는 pyenv의 소개 및 사용법 정리</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/sh.html">Bourne Shell</a></h2>
+<span class="article-description">
+본 셸, sh, 가장 기본적인 셸(Shell)에 대한 팁 정리</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
+</div>
+</div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/kubectl.html">kubectl</a></h2>
@@ -104,24 +170,6 @@ kubectl 사용법 정리</span
 Xcode와 관련된 팁을 모아보는 글</span
 ><span class="article-link-date">
 2020년 6월 23일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/rust.html">Rust</a></h2>
-<span class="article-description">
-러스트(Rust)에 대한 글 모음</span
-><span class="article-link-date">
-2020년 6월 21일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/poetry.html">Poetry</a></h2>
-<span class="article-description">
-poetry라는 새로운 파이썬 의존성 및 패키지 관리자의 사용법을 정리하는 글입니다.</span
-><span class="article-link-date">
-2020년 6월 21일 수정</span>
 </div>
 </div>
 <div class="article-link">
@@ -162,15 +210,6 @@ macOS의 date 유틸리티 사용법 메모</span
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
-<span class="article-description">
-Emacs(이맥스)에 관한 대략적인 설명과 관련된 글들, 그리고 몇 가지 트러블슈팅 메모를 정리합니다.</span
-><span class="article-link-date">
-2020년 5월 12일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/tmux.html">Tmux</a></h2>
 <span class="article-description">
 터미널 멀티플렉서인 Tmux 소개 및 사용법, 단축키 등을 정리하는 글</span
@@ -198,15 +237,6 @@ Grep에 관한 토막 글들</span
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/pyenv.html">pyenv</a></h2>
-<span class="article-description">
-파이썬 버전 및 virtualenv 환경을 별도로 관리할 수 있게 해주는 pyenv의 소개 및 사용법을 정리하는 글입니다.</span
-><span class="article-link-date">
-2020년 4월 22일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/find.html">find</a></h2>
 <span class="article-description">
 find CLI 도구 소개 및 사용법</span
@@ -221,15 +251,6 @@ find CLI 도구 소개 및 사용법</span
 커맨드 라인 인터페이스(Command Line Interface)</span
 ><span class="article-link-date">
 2020년 4월 15일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/sh.html">Bourne Shell</a></h2>
-<span class="article-description">
-본 셸, sh, 가장 기본적인 셸(Shell)에 대한 팁을 정리해 보는 글입니다.</span
-><span class="article-link-date">
-2020년 4월 13일 수정</span>
 </div>
 </div>
 </div>
