--- a/note/swift-package-manager.html
+++ b/note/swift-package-manager.html
@@ -9,9 +9,9 @@
 <title>Swift Package Manager - Seorenn Note</title>
 <meta name="twitter:title" content="Swift Package Manager" />
 <meta name="og:title" content="Swift Package Manager" />
-<meta name="description" content="Swift Package Manager(SPM)에 대한 소개 및 사용법을 알아보자" />
-<meta name="twitter:description" content="Swift Package Manager(SPM)에 대한 소개 및 사용법을 알아보자" />
-<meta name="og:description" content="Swift Package Manager(SPM)에 대한 소개 및 사용법을 알아보자" />
+<meta name="description" content="Swift Package Manager(SPM)에 대한 소개 및 사용법 정리" />
+<meta name="twitter:description" content="Swift Package Manager(SPM)에 대한 소개 및 사용법 정리" />
+<meta name="og:description" content="Swift Package Manager(SPM)에 대한 소개 및 사용법 정리" />
 <link rel="canonical" href="https://seorenn.github.io/note/swift-package-manager.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/swift-package-manager.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>Swift Package Manager</h1>
-<div class="title-date">2020년 7월 2일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
