--- a/note/swift.html
+++ b/note/swift.html
@@ -383,6 +383,51 @@ A 구조체의 테이블보다 우선 검색된다는 말이 된다.
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/rust.html">Rust</a></h2>
+<span class="article-description">
+러스트(Rust) 소개 및 관련 글 모음</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/python-list-comprehension.html">Python List Comprehension</a></h2>
+<span class="article-description">
+Python의 filter와 map의 대체 기능인 List Comprehension 소개</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/python-3-8-updates.html">Python 3.8 업데이트 내역</a></h2>
+<span class="article-description">
+파이썬 3.8에서 바뀌거나 추가된 내역 정리</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/annotation-vs-comment.html">Annotation VS Comment</a></h2>
+<span class="article-description">
+annotation과 comment라는 두 단어를 개인적인 사정으로(?) 비교하는 이상한 글</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/swift-package-manager.html">Swift Package Manager</a></h2>
+<span class="article-description">
+Swift Package Manager(SPM)에 대한 소개 및 사용법 정리</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/swiftui.html">SwiftUI</a></h2>
 <span class="article-description">
 SwiftUI의 소개와 관련된 글 정리</span
@@ -401,33 +446,6 @@ SwiftUI에서 유용하게 사용되는 Property Wrapper 정리</span
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/swift-package-manager.html">Swift Package Manager</a></h2>
-<span class="article-description">
-Swift Package Manager(SPM)에 대한 소개 및 사용법을 알아보자</span
-><span class="article-link-date">
-2020년 7월 2일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/annotation-vs-comment.html">Annotation VS Comment</a></h2>
-<span class="article-description">
-이 글은 annotation과 comment라는 두 단어를 개인적인 사정으로(?) 비교하는 이상한 글이다</span
-><span class="article-link-date">
-2020년 7월 1일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/python-3-8-updates.html">Python 3.8 업데이트 내역</a></h2>
-<span class="article-description">
-파이썬 3.8에서 바뀌거나 추가된 것들을 간략히 알아보자</span
-><span class="article-link-date">
-2020년 6월 27일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/nextstep.html">NeXTSTEP</a></h2>
 <span class="article-description">
 NeXTSTEP(넥스트스텝)</span
@@ -442,24 +460,6 @@ NeXTSTEP(넥스트스텝)</span
 Objective-C에 대한 짧은 소개</span
 ><span class="article-link-date">
 2020년 6월 23일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/rust.html">Rust</a></h2>
-<span class="article-description">
-러스트(Rust)에 대한 글 모음</span
-><span class="article-link-date">
-2020년 6월 21일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/python-list-comprehension.html">Python List Comprehension</a></h2>
-<span class="article-description">
-Python의 filter와 map의 대체 기능인 List Comprehension을 간략히 살펴보자</span
-><span class="article-link-date">
-2020년 6월 21일 수정</span>
 </div>
 </div>
 <div class="article-link">
