--- a/note/sync-dirs-with-rsync.html
+++ b/note/sync-dirs-with-rsync.html
@@ -9,9 +9,9 @@
 <title>rsync로 두 디렉터리 동기화하기 - Seorenn Note</title>
 <meta name="twitter:title" content="rsync로 두 디렉터리 동기화하기" />
 <meta name="og:title" content="rsync로 두 디렉터리 동기화하기" />
-<meta name="description" content="rsync를 이용해 두 디렉터리의 내용을 동일하게 하는 방법을 알아보자" />
-<meta name="twitter:description" content="rsync를 이용해 두 디렉터리의 내용을 동일하게 하는 방법을 알아보자" />
-<meta name="og:description" content="rsync를 이용해 두 디렉터리의 내용을 동일하게 하는 방법을 알아보자" />
+<meta name="description" content="rsync를 이용해 로컬의 두 디렉터리 내용을 동일하게 하는 방법" />
+<meta name="twitter:description" content="rsync를 이용해 로컬의 두 디렉터리 내용을 동일하게 하는 방법" />
+<meta name="og:description" content="rsync를 이용해 로컬의 두 디렉터리 내용을 동일하게 하는 방법" />
 <link rel="canonical" href="https://seorenn.github.io/note/sync-dirs-with-rsync.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/sync-dirs-with-rsync.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>rsync로 두 디렉터리 동기화하기</h1>
-<div class="title-date">2020년 6월 23일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
