--- a/note/x86.html
+++ b/note/x86.html
@@ -9,9 +9,9 @@
 <title>x86 - Seorenn Note</title>
 <meta name="twitter:title" content="x86" />
 <meta name="og:title" content="x86" />
-<meta name="description" content="x86는 무엇을 의미하는가" />
-<meta name="twitter:description" content="x86는 무엇을 의미하는가" />
-<meta name="og:description" content="x86는 무엇을 의미하는가" />
+<meta name="description" content="x86이란 무엇을 의미하는가" />
+<meta name="twitter:description" content="x86이란 무엇을 의미하는가" />
+<meta name="og:description" content="x86이란 무엇을 의미하는가" />
 <link rel="canonical" href="https://seorenn.github.io/note/x86.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/x86.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>x86</h1>
-<div class="title-date">2020년 7월 2일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <p>
 x86은 보통 인텔(Intel) 혹은 AMD의 CPU 칩셋 혹은 아키텍처를 의미하거나, 혹은 이런 칩을 위한 OS에서 동작하는 애플리케이션(어플)인지를 표현하기 위해 종종 사용되는 단어다.
