--- a/note/afplay.html
+++ b/note/afplay.html
@@ -9,9 +9,9 @@
 <title>afplay - Seorenn Note</title>
 <meta name="twitter:title" content="afplay" />
 <meta name="og:title" content="afplay" />
-<meta name="description" content="macOS Audio File Player" />
-<meta name="twitter:description" content="macOS Audio File Player" />
-<meta name="og:description" content="macOS Audio File Player" />
+<meta name="description" content="macOS용 CLI Audio File Player의 간단한 사용법" />
+<meta name="twitter:description" content="macOS용 CLI Audio File Player의 간단한 사용법" />
+<meta name="og:description" content="macOS용 CLI Audio File Player의 간단한 사용법" />
 <link rel="canonical" href="https://seorenn.github.io/note/afplay.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/afplay.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>afplay</h1>
-<div class="title-date">2020년 4월 15일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
