--- a/note/apple.html
+++ b/note/apple.html
@@ -166,6 +166,15 @@ iTunes 혹은 앱스토어(Appstore) 같은 소프트웨어 생태계에도 큰 
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/safari.html">사파리</a></h2>
+<span class="article-description">
+사파리(Safari) 웹 브라우저 소개</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
 <span class="article-description">
 스위프트 언어에 대한 소개 및 관련된 글 정리</span
@@ -234,15 +243,6 @@ NeXTSTEP(넥스트스텝)</span
 Swift와 Objective-C에서 쓰이는 ARC(Automatic Reference Counting) 메모리 관리 시스템</span
 ><span class="article-link-date">
 2020년 6월 16일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/safari.html">사파리</a></h2>
-<span class="article-description">
-사파리(Safari) 웹 브라우저</span
-><span class="article-link-date">
-2020년 5월 28일 수정</span>
 </div>
 </div>
 <div class="article-link">
