--- a/note/emacs-lisp.html
+++ b/note/emacs-lisp.html
@@ -516,20 +516,29 @@ Unused lexical argument 'bar'
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/org-publish.html">Org Publish로 익스포트 자동화하기</a></h2>
+<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
 <span class="article-description">
-Org 문서들과 관련 파일들을 자동으로 익스포트해 주는 Org Publish의 설정방법과 사용법을 알아보자</span
+Emacs(이맥스)에 관한 대략적인 설명과 관련된 글들</span
 ><span class="article-link-date">
-2020년 6월 26일 수정</span>
+2020년 7월 3일 수정</span>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/org-table-spreadsheet.html">Org 테이블 스프레드시트</a></h2>
 <span class="article-description">
-Org Mode의 테이블의 스프레드시트 기능을 사용해보자</span
+Org Mode의 테이블의 스프레드시트 기능 사용법</span
 ><span class="article-link-date">
-2020년 6월 26일 수정</span>
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/org-publish.html">Org Publish로 익스포트 자동화하기</a></h2>
+<span class="article-description">
+Org 문서들과 관련 파일들을 자동으로 익스포트해 주는 Org Publish의 설정방법과 사용법 정리</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
 </div>
 </div>
 <div class="article-link">
@@ -539,15 +548,6 @@ Org Mode의 테이블의 스프레드시트 기능을 사용해보자</span
 ielm(Inferior Emacs Lisp Mode)에 대한 간단한 소개</span
 ><span class="article-link-date">
 2020년 6월 8일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
-<span class="article-description">
-Emacs(이맥스)에 관한 대략적인 설명과 관련된 글들, 그리고 몇 가지 트러블슈팅 메모를 정리합니다.</span
-><span class="article-link-date">
-2020년 5월 12일 수정</span>
 </div>
 </div>
 <div class="article-link">
