--- a/note/macos.html
+++ b/note/macos.html
@@ -233,6 +233,78 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/safari.html">사파리</a></h2>
+<span class="article-description">
+사파리(Safari) 웹 브라우저 소개</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/killer-application.html">킬러 애플리케이션</a></h2>
+<span class="article-description">
+킬러 애플리케이션(Killer Application)의 의미</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
+<span class="article-description">
+Emacs(이맥스)에 관한 대략적인 설명과 관련된 글들</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/pyenv.html">pyenv</a></h2>
+<span class="article-description">
+파이썬 버전 및 virtualenv 환경을 별도로 관리할 수 있게 해주는 pyenv의 소개 및 사용법 정리</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/homebrew.html">Homebrew</a></h2>
+<span class="article-description">
+Homebrew의 소개 및 간단한 사용법</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/afplay.html">afplay</a></h2>
+<span class="article-description">
+macOS용 CLI Audio File Player의 간단한 사용법</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/sh.html">Bourne Shell</a></h2>
+<span class="article-description">
+본 셸, sh, 가장 기본적인 셸(Shell)에 대한 팁 정리</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/caffeinate.html">caffeinate</a></h2>
+<span class="article-description">
+맥 전용 잠자기 방지 도구인 caffeinate 소개 및 사용법 정리</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/swiftui.html">SwiftUI</a></h2>
 <span class="article-description">
 SwiftUI의 소개와 관련된 글 정리</span
@@ -359,24 +431,6 @@ Vim 에디터와 관련된 글</span
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/killer-application.html">킬러 애플리케이션</a></h2>
-<span class="article-description">
-킬러 애플리케이션(Killer Application)</span
-><span class="article-link-date">
-2020년 5월 28일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/safari.html">사파리</a></h2>
-<span class="article-description">
-사파리(Safari) 웹 브라우저</span
-><span class="article-link-date">
-2020년 5월 28일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/userdefaults.html">UserDefaults</a></h2>
 <span class="article-description">
 UserDefaults 혹은 NSUserDefaults에 대한 글 모음</span
@@ -398,15 +452,6 @@ UserDefaults 혹은 NSUserDefaults에 대한 글 모음</span
 <h2><a class="article-link-title" href="/note/date.html">date</a></h2>
 <span class="article-description">
 macOS의 date 유틸리티 사용법 메모</span
-><span class="article-link-date">
-2020년 5월 12일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
-<span class="article-description">
-Emacs(이맥스)에 관한 대략적인 설명과 관련된 글들, 그리고 몇 가지 트러블슈팅 메모를 정리합니다.</span
 ><span class="article-link-date">
 2020년 5월 12일 수정</span>
 </div>
@@ -503,15 +548,6 @@ macOS 용 디스클 관리 유틸리티 diskutil 대충 살펴보기</span
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/pyenv.html">pyenv</a></h2>
-<span class="article-description">
-파이썬 버전 및 virtualenv 환경을 별도로 관리할 수 있게 해주는 pyenv의 소개 및 사용법을 정리하는 글입니다.</span
-><span class="article-link-date">
-2020년 4월 22일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/dd.html">dd</a></h2>
 <span class="article-description">
 macOS의 dd 유틸리티에 대한 글</span
@@ -526,42 +562,6 @@ macOS의 dd 유틸리티에 대한 글</span
 ImageMagick에 대한 팁 모음</span
 ><span class="article-link-date">
 2020년 4월 21일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/homebrew.html">Homebrew</a></h2>
-<span class="article-description">
-Homebrew의 소개 및 간단한 사용법을 정리합니다</span
-><span class="article-link-date">
-2020년 4월 17일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/afplay.html">afplay</a></h2>
-<span class="article-description">
-macOS Audio File Player</span
-><span class="article-link-date">
-2020년 4월 15일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/sh.html">Bourne Shell</a></h2>
-<span class="article-description">
-본 셸, sh, 가장 기본적인 셸(Shell)에 대한 팁을 정리해 보는 글입니다.</span
-><span class="article-link-date">
-2020년 4월 13일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/caffeinate.html">caffeinate</a></h2>
-<span class="article-description">
-맥 전용 잠자기 방지 도구인 caffeinate 소개 및 사용법을 정리합니다.</span
-><span class="article-link-date">
-2020년 4월 13일 수정</span>
 </div>
 </div>
 </div>
