--- a/note/pyenv.html
+++ b/note/pyenv.html
@@ -9,9 +9,9 @@
 <title>pyenv - Seorenn Note</title>
 <meta name="twitter:title" content="pyenv" />
 <meta name="og:title" content="pyenv" />
-<meta name="description" content="파이썬 버전 및 virtualenv 환경을 별도로 관리할 수 있게 해주는 pyenv의 소개 및 사용법을 정리하는 글입니다." />
-<meta name="twitter:description" content="파이썬 버전 및 virtualenv 환경을 별도로 관리할 수 있게 해주는 pyenv의 소개 및 사용법을 정리하는 글입니다." />
-<meta name="og:description" content="파이썬 버전 및 virtualenv 환경을 별도로 관리할 수 있게 해주는 pyenv의 소개 및 사용법을 정리하는 글입니다." />
+<meta name="description" content="파이썬 버전 및 virtualenv 환경을 별도로 관리할 수 있게 해주는 pyenv의 소개 및 사용법 정리" />
+<meta name="twitter:description" content="파이썬 버전 및 virtualenv 환경을 별도로 관리할 수 있게 해주는 pyenv의 소개 및 사용법 정리" />
+<meta name="og:description" content="파이썬 버전 및 virtualenv 환경을 별도로 관리할 수 있게 해주는 pyenv의 소개 및 사용법 정리" />
 <link rel="canonical" href="https://seorenn.github.io/note/pyenv.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/pyenv.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>pyenv</h1>
-<div class="title-date">2020년 4월 22일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
