--- a/note/python-3-8-updates.html
+++ b/note/python-3-8-updates.html
@@ -9,9 +9,9 @@
 <title>Python 3.8 업데이트 내역 - Seorenn Note</title>
 <meta name="twitter:title" content="Python 3.8 업데이트 내역" />
 <meta name="og:title" content="Python 3.8 업데이트 내역" />
-<meta name="description" content="파이썬 3.8에서 바뀌거나 추가된 것들을 간략히 알아보자" />
-<meta name="twitter:description" content="파이썬 3.8에서 바뀌거나 추가된 것들을 간략히 알아보자" />
-<meta name="og:description" content="파이썬 3.8에서 바뀌거나 추가된 것들을 간략히 알아보자" />
+<meta name="description" content="파이썬 3.8에서 바뀌거나 추가된 내역 정리" />
+<meta name="twitter:description" content="파이썬 3.8에서 바뀌거나 추가된 내역 정리" />
+<meta name="og:description" content="파이썬 3.8에서 바뀌거나 추가된 내역 정리" />
 <link rel="canonical" href="https://seorenn.github.io/note/python-3-8-updates.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/python-3-8-updates.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>Python 3.8 업데이트 내역</h1>
-<div class="title-date">2020년 6월 27일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
