--- a/note/python-bytes-and-bytearray.html
+++ b/note/python-bytes-and-bytearray.html
@@ -9,9 +9,9 @@
 <title>Python의 Bytes와 Byte Array - Seorenn Note</title>
 <meta name="twitter:title" content="Python의 Bytes와 Byte Array" />
 <meta name="og:title" content="Python의 Bytes와 Byte Array" />
-<meta name="description" content="파이썬의 바이트와 바이트 배열 타입을 살펴보고 덤으로 한글과 바이트의 관계도 살펴보자" />
-<meta name="twitter:description" content="파이썬의 바이트와 바이트 배열 타입을 살펴보고 덤으로 한글과 바이트의 관계도 살펴보자" />
-<meta name="og:description" content="파이썬의 바이트와 바이트 배열 타입을 살펴보고 덤으로 한글과 바이트의 관계도 살펴보자" />
+<meta name="description" content="파이썬의 바이트와 바이트 배열 타입을 살펴보고 덤으로 한글과 바이트의 관계도 정리하는 글" />
+<meta name="twitter:description" content="파이썬의 바이트와 바이트 배열 타입을 살펴보고 덤으로 한글과 바이트의 관계도 정리하는 글" />
+<meta name="og:description" content="파이썬의 바이트와 바이트 배열 타입을 살펴보고 덤으로 한글과 바이트의 관계도 정리하는 글" />
 <link rel="canonical" href="https://seorenn.github.io/note/python-bytes-and-bytearray.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/python-bytes-and-bytearray.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>Python의 Bytes와 Byte Array</h1>
-<div class="title-date">2020년 6월 28일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
