--- a/note/python-exception-handling.html
+++ b/note/python-exception-handling.html
@@ -9,9 +9,9 @@
 <title>Python 예외 처리 - Seorenn Note</title>
 <meta name="twitter:title" content="Python 예외 처리" />
 <meta name="og:title" content="Python 예외 처리" />
-<meta name="description" content="파이썬의 예외 처리와 예외 발생시키기, 예외 만들기, Traceback 출력하기 등을 알아보자" />
-<meta name="twitter:description" content="파이썬의 예외 처리와 예외 발생시키기, 예외 만들기, Traceback 출력하기 등을 알아보자" />
-<meta name="og:description" content="파이썬의 예외 처리와 예외 발생시키기, 예외 만들기, Traceback 출력하기 등을 알아보자" />
+<meta name="description" content="파이썬의 예외 처리와 예외 발생시키기, 예외 만들기, Traceback 출력하기 등 정리" />
+<meta name="twitter:description" content="파이썬의 예외 처리와 예외 발생시키기, 예외 만들기, Traceback 출력하기 등 정리" />
+<meta name="og:description" content="파이썬의 예외 처리와 예외 발생시키기, 예외 만들기, Traceback 출력하기 등 정리" />
 <link rel="canonical" href="https://seorenn.github.io/note/python-exception-handling.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/python-exception-handling.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>Python 예외 처리</h1>
-<div class="title-date">2020년 6월 24일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
