--- a/note/python-regular-expression.html
+++ b/note/python-regular-expression.html
@@ -9,9 +9,9 @@
 <title>Python 정규표현식 - Seorenn Note</title>
 <meta name="twitter:title" content="Python 정규표현식" />
 <meta name="og:title" content="Python 정규표현식" />
-<meta name="description" content="파이썬(Python)의 정규표현식을 간단히 알아보자" />
-<meta name="twitter:description" content="파이썬(Python)의 정규표현식을 간단히 알아보자" />
-<meta name="og:description" content="파이썬(Python)의 정규표현식을 간단히 알아보자" />
+<meta name="description" content="파이썬(Python)의 정규표현식 정리" />
+<meta name="twitter:description" content="파이썬(Python)의 정규표현식 정리" />
+<meta name="og:description" content="파이썬(Python)의 정규표현식 정리" />
 <link rel="canonical" href="https://seorenn.github.io/note/python-regular-expression.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/python-regular-expression.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>Python 정규표현식</h1>
-<div class="title-date">2020년 6월 21일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
