--- a/note/python-simple-web-server.html
+++ b/note/python-simple-web-server.html
@@ -9,9 +9,9 @@
 <title>Python으로 간단한 웹 서버 띄우기 - Seorenn Note</title>
 <meta name="twitter:title" content="Python으로 간단한 웹 서버 띄우기" />
 <meta name="og:title" content="Python으로 간단한 웹 서버 띄우기" />
-<meta name="description" content="파이썬으로 디버깅 용도로 쓸 간단한 HTTP 웹 서버를 띄우는 방법을 알아보자" />
-<meta name="twitter:description" content="파이썬으로 디버깅 용도로 쓸 간단한 HTTP 웹 서버를 띄우는 방법을 알아보자" />
-<meta name="og:description" content="파이썬으로 디버깅 용도로 쓸 간단한 HTTP 웹 서버를 띄우는 방법을 알아보자" />
+<meta name="description" content="파이썬으로 디버깅 용도로 쓸 간단한 HTTP 웹 서버를 띄우는 방법 정리" />
+<meta name="twitter:description" content="파이썬으로 디버깅 용도로 쓸 간단한 HTTP 웹 서버를 띄우는 방법 정리" />
+<meta name="og:description" content="파이썬으로 디버깅 용도로 쓸 간단한 HTTP 웹 서버를 띄우는 방법 정리" />
 <link rel="canonical" href="https://seorenn.github.io/note/python-simple-web-server.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/python-simple-web-server.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>Python으로 간단한 웹 서버 띄우기</h1>
-<div class="title-date">2020년 6월 30일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
