--- a/note/python.html
+++ b/note/python.html
@@ -160,74 +160,137 @@
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/javascript.html">Javascript</a></h2>
+<h2><a class="article-link-title" href="/note/python-exception-handling.html">Python 예외 처리</a></h2>
 <span class="article-description">
-자바스크립트(Javascript), ECMAScript(ES5, ES6)와 관련된 글들</span
+파이썬의 예외 처리와 예외 발생시키기, 예외 만들기, Traceback 출력하기 등 정리</span
 ><span class="article-link-date">
-2020년 7월 2일 수정</span>
+2020년 7월 3일 수정</span>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/annotation-vs-comment.html">Annotation VS Comment</a></h2>
+<h2><a class="article-link-title" href="/note/rust.html">Rust</a></h2>
 <span class="article-description">
-이 글은 annotation과 comment라는 두 단어를 개인적인 사정으로(?) 비교하는 이상한 글이다</span
+러스트(Rust) 소개 및 관련 글 모음</span
 ><span class="article-link-date">
-2020년 7월 1일 수정</span>
+2020년 7월 3일 수정</span>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/python-simple-web-server.html">Python으로 간단한 웹 서버 띄우기</a></h2>
+<h2><a class="article-link-title" href="/note/python3-manual-migration.html">Python 3로 수동으로 옮겨가기</a></h2>
 <span class="article-description">
-파이썬으로 디버깅 용도로 쓸 간단한 HTTP 웹 서버를 띄우는 방법을 알아보자</span
+Python 3 수동 마이그레이션에 대한 개인적인 경험 정리</span
 ><span class="article-link-date">
-2020년 6월 30일 수정</span>
+2020년 7월 3일 수정</span>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/python-bytes-and-bytearray.html">Python의 Bytes와 Byte Array</a></h2>
+<h2><a class="article-link-title" href="/note/python-bitstring.html">bitstring(Python)</a></h2>
 <span class="article-description">
-파이썬의 바이트와 바이트 배열 타입을 살펴보고 덤으로 한글과 바이트의 관계도 살펴보자</span
+파이썬의 bitstring 패키지 소개 및 사용법 정리</span
 ><span class="article-link-date">
-2020년 6월 28일 수정</span>
+2020년 7월 3일 수정</span>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/python-dictionary.html">Python 딕셔너리 타입 정리</a></h2>
+<h2><a class="article-link-title" href="/note/python-regular-expression.html">Python 정규표현식</a></h2>
 <span class="article-description">
-파이썬의 사전형 혹은 딕셔너리 타입(Dictionary Type)의 생성과 수정 및 여러 변조 방법을 알아보자</span
+파이썬(Python)의 정규표현식 정리</span
 ><span class="article-link-date">
-2020년 6월 27일 수정</span>
+2020년 7월 3일 수정</span>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/python-3-8-updates.html">Python 3.8 업데이트 내역</a></h2>
+<h2><a class="article-link-title" href="/note/python-list-comprehension.html">Python List Comprehension</a></h2>
 <span class="article-description">
-파이썬 3.8에서 바뀌거나 추가된 것들을 간략히 알아보자</span
+Python의 filter와 map의 대체 기능인 List Comprehension 소개</span
 ><span class="article-link-date">
-2020년 6월 27일 수정</span>
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/pyenv.html">pyenv</a></h2>
+<span class="article-description">
+파이썬 버전 및 virtualenv 환경을 별도로 관리할 수 있게 해주는 pyenv의 소개 및 사용법 정리</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/flake8.html">flake8</a></h2>
+<span class="article-description">
+flake8의 사용법 및 설정 방법 정리</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/python-file-dir-tips.html">Python으로 파일의 경로 및 목록 다루기</a></h2>
 <span class="article-description">
-파이썬으로 경로에서 파일명 얻기, 확장자 분리하기, 디렉터리 구분하기, 파일 디렉터리 목록 얻기 등</span
+파이썬으로 경로에서 파일명 얻기, 확장자 분리하기, 디렉터리 구분하기, 파일 디렉터리 목록 얻기 등의 팁 정리</span
 ><span class="article-link-date">
-2020년 6월 27일 수정</span>
+2020년 7월 3일 수정</span>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/python-exception-handling.html">Python 예외 처리</a></h2>
+<h2><a class="article-link-title" href="/note/python-3-8-updates.html">Python 3.8 업데이트 내역</a></h2>
 <span class="article-description">
-파이썬의 예외 처리와 예외 발생시키기, 예외 만들기, Traceback 출력하기 등을 알아보자</span
+파이썬 3.8에서 바뀌거나 추가된 내역 정리</span
 ><span class="article-link-date">
-2020년 6월 24일 수정</span>
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/python-dictionary.html">Python 딕셔너리 타입 정리</a></h2>
+<span class="article-description">
+파이썬의 사전형 혹은 딕셔너리 타입(Dictionary Type)의 생성과 수정 및 여러 변조 방법 정리</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/python-bytes-and-bytearray.html">Python의 Bytes와 Byte Array</a></h2>
+<span class="article-description">
+파이썬의 바이트와 바이트 배열 타입을 살펴보고 덤으로 한글과 바이트의 관계도 정리하는 글</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/python-simple-web-server.html">Python으로 간단한 웹 서버 띄우기</a></h2>
+<span class="article-description">
+파이썬으로 디버깅 용도로 쓸 간단한 HTTP 웹 서버를 띄우는 방법 정리</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/annotation-vs-comment.html">Annotation VS Comment</a></h2>
+<span class="article-description">
+annotation과 comment라는 두 단어를 개인적인 사정으로(?) 비교하는 이상한 글</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/javascript.html">Javascript</a></h2>
+<span class="article-description">
+자바스크립트(Javascript), ECMAScript(ES5, ES6)와 관련된 글 정리</span
+><span class="article-link-date">
+2020년 7월 2일 수정</span>
 </div>
 </div>
 <div class="article-link">
@@ -246,51 +309,6 @@
 Celery의 설치 및 패키지 사용법, 간단한 워커 서버 사용법 등을 정리하는 글</span
 ><span class="article-link-date">
 2020년 6월 22일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/rust.html">Rust</a></h2>
-<span class="article-description">
-러스트(Rust)에 대한 글 모음</span
-><span class="article-link-date">
-2020년 6월 21일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/python3-manual-migration.html">Python 3로 수동으로 옮겨가기</a></h2>
-<span class="article-description">
-Python 3 수동 마이그레이션에 대해 정리해보자</span
-><span class="article-link-date">
-2020년 6월 21일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/python-bitstring.html">bitstring(Python)</a></h2>
-<span class="article-description">
-파이썬의 bitstring 패키지가 무엇인지 살펴보자</span
-><span class="article-link-date">
-2020년 6월 21일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/python-regular-expression.html">Python 정규표현식</a></h2>
-<span class="article-description">
-파이썬(Python)의 정규표현식을 간단히 알아보자</span
-><span class="article-link-date">
-2020년 6월 21일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/python-list-comprehension.html">Python List Comprehension</a></h2>
-<span class="article-description">
-Python의 filter와 map의 대체 기능인 List Comprehension을 간략히 살펴보자</span
-><span class="article-link-date">
-2020년 6월 21일 수정</span>
 </div>
 </div>
 <div class="article-link">
@@ -336,24 +354,6 @@ pip에 관한 소개 및 팁 모음</span
 Seorenn의 개인정보가 듬뿍 담겼을 리가 없는 페이지</span
 ><span class="article-link-date">
 2020년 5월 1일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/pyenv.html">pyenv</a></h2>
-<span class="article-description">
-파이썬 버전 및 virtualenv 환경을 별도로 관리할 수 있게 해주는 pyenv의 소개 및 사용법을 정리하는 글입니다.</span
-><span class="article-link-date">
-2020년 4월 22일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/flake8.html">flake8</a></h2>
-<span class="article-description">
-flake8의 사용법 및 설정 방법을 간단히 정리합니다.</span
-><span class="article-link-date">
-2020년 4월 19일 수정</span>
 </div>
 </div>
 </div>
