--- a/note/safari.html
+++ b/note/safari.html
@@ -9,9 +9,9 @@
 <title>사파리 - Seorenn Note</title>
 <meta name="twitter:title" content="사파리" />
 <meta name="og:title" content="사파리" />
-<meta name="description" content="사파리(Safari) 웹 브라우저" />
-<meta name="twitter:description" content="사파리(Safari) 웹 브라우저" />
-<meta name="og:description" content="사파리(Safari) 웹 브라우저" />
+<meta name="description" content="사파리(Safari) 웹 브라우저 소개" />
+<meta name="twitter:description" content="사파리(Safari) 웹 브라우저 소개" />
+<meta name="og:description" content="사파리(Safari) 웹 브라우저 소개" />
 <link rel="canonical" href="https://seorenn.github.io/note/safari.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/safari.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -61,7 +61,7 @@
 </div>
 <header>
 <h1>사파리</h1>
-<div class="title-date">2020년 5월 28일 수정</div>
+<div class="title-date">2020년 7월 3일 수정</div>
 </header>
 <blockquote>
 <p>
@@ -127,20 +127,20 @@
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/chrome.html">크롬</a></h2>
+<span class="article-description">
+크롬(Chrome) 웹 브라우저 소개</span
+><span class="article-link-date">
+2020년 7월 3일 수정</span>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/wwdc2020.html">WWDC20</a></h2>
 <span class="article-description">
 WWDC 2020(WWDC20) 키노트 정리</span
 ><span class="article-link-date">
 2020년 6월 24일 수정</span>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/chrome.html">크롬</a></h2>
-<span class="article-description">
-크롬(Chrome) 웹 브라우저</span
-><span class="article-link-date">
-2020년 5월 28일 수정</span>
 </div>
 </div>
 </div>
